3.0.3
   * Autostart nautilus at login if it is configured to show
     desktop icons (bug 648087)

3.0.2
   * Really tweak window theme - both the fallback and the
     shell metacity/mutter theme
   * Fix attribution of data/welcome.png

3.0.1
   * Fix localization
   * Tweak window theme
   * Tweak week date in calendar (Emmanuele Bassi)
   * Tweak cursor themes (Andrea Fagiani)
   * Support user installed themes in $HOME (Andrea Fagiani)
   * Remove org.gnome.desktop.background draw-backgroud tweak, it
     should never be false

3.0.0
   * First stable release
   * Enable icon theme selection
   * Tweak font antialiasing
   * Support l10n

2.91.93
    * Add license (GPL3)
    * Tweak shell clock to show date
    * Tweak font hinting

2.91.92
    * Initial Release
    * Support shell theme change and installation
    * Tweak gtk theme
    * Tweak the user-interface and titlebar fonts
    * Tweak icons in menus and buttons
    * Tweak behavior on laptop lid close
    * Tweak shell font size
    * Tweak file manager desktop icons
    * Tweak titlebar click action 