@@ -1,6 +1,8 @@
 3.0.3
    * Autostart nautilus at login if it is configured to show
      desktop icons (bug 648087)
+   * Improved robustness for missing theme/icon
+     directories (bug 648735)
 
 3.0.2
    * Really tweak window theme - both the fallback and the
